--- a/src/app/feature/calendar/cards/christmas-tree/christmas-tree.component.html
+++ b/src/app/feature/calendar/cards/christmas-tree/christmas-tree.component.html
@@ -236,10 +236,7 @@
             transform: translateZ(58px) rotate(106.33803711997693deg);
           "
         ></div>
-        <div
-          class="branch"
-          style="height: 90px; width: 10px; transform: translateZ(60px) rotate(93.0126410876416deg)"
-        ></div>
+        <div class="branch" style="height: 90px; width: 10px; transform: translateZ(60px) rotate(93.0126410876416deg)"></div>
         <div
           class="branch"
           style="
@@ -1149,42 +1146,15 @@
         ></div>
       </div>
       <div class="tree-top">
-        <div
-          class="star"
-          style="transform: translateZ(225px) translateY(-4.25px) rotateX(-90deg)"
-        ></div>
-        <div
-          class="star"
-          style="transform: translateZ(225px) translateY(-4.5px) rotateX(-90deg)"
-        ></div>
-        <div
-          class="star"
-          style="transform: translateZ(225px) translateY(-4.75px) rotateX(-90deg)"
-        ></div>
-        <div
-          class="star"
-          style="transform: translateZ(225px) translateY(-5px) rotateX(-90deg)"
-        ></div>
-        <div
-          class="star"
-          style="transform: translateZ(225px) translateY(-5.25px) rotateX(-90deg)"
-        ></div>
-        <div
-          class="star"
-          style="transform: translateZ(225px) translateY(-5.5px) rotateX(-90deg)"
-        ></div>
-        <div
-          class="star"
-          style="transform: translateZ(225px) translateY(-5.75px) rotateX(-90deg)"
-        ></div>
-        <div
-          class="star"
-          style="transform: translateZ(225px) translateY(-6px) rotateX(-90deg)"
-        ></div>
-        <div
-          class="star"
-          style="transform: translateZ(225px) translateY(-6.25px) rotateX(-90deg)"
-        ></div>
+        <div class="star" style="transform: translateZ(225px) translateY(-4.25px) rotateX(-90deg)"></div>
+        <div class="star" style="transform: translateZ(225px) translateY(-4.5px) rotateX(-90deg)"></div>
+        <div class="star" style="transform: translateZ(225px) translateY(-4.75px) rotateX(-90deg)"></div>
+        <div class="star" style="transform: translateZ(225px) translateY(-5px) rotateX(-90deg)"></div>
+        <div class="star" style="transform: translateZ(225px) translateY(-5.25px) rotateX(-90deg)"></div>
+        <div class="star" style="transform: translateZ(225px) translateY(-5.5px) rotateX(-90deg)"></div>
+        <div class="star" style="transform: translateZ(225px) translateY(-5.75px) rotateX(-90deg)"></div>
+        <div class="star" style="transform: translateZ(225px) translateY(-6px) rotateX(-90deg)"></div>
+        <div class="star" style="transform: translateZ(225px) translateY(-6.25px) rotateX(-90deg)"></div>
       </div>
     </div>
   </div>
