--- a/src/app/feature/calendar/cards/sledge/sledge.component.css
+++ b/src/app/feature/calendar/cards/sledge/sledge.component.css
@@ -40,13 +40,7 @@
   margin-top: -4rem;
   width: 8rem;
   height: 8rem;
-  background: radial-gradient(
-    closest-side,
-    transparent 75%,
-    var(--sledge-runner) 27%,
-    var(--sledge-runner) 99%,
-    transparent 100%
-  );
+  background: radial-gradient(closest-side, transparent 75%, var(--sledge-runner) 27%, var(--sledge-runner) 99%, transparent 100%);
 }
 
 .sledge .sledge-runner__front--top {
@@ -111,8 +105,7 @@
   position: absolute;
   right: 0;
   top: 0;
-  transform: skewY(-50deg) rotate(90deg) scaleX(1.8) scaleY(0.85) translateX(0.6rem)
-    translateY(-0.4rem);
+  transform: skewY(-50deg) rotate(90deg) scaleX(1.8) scaleY(0.85) translateX(0.6rem) translateY(-0.4rem);
 }
 
 .sledge .sledge-back__piece {
