refactor: add eslint & lint src folder & fix problems

--- a/src/app/feature/calendar/calendar-grid.component.html
+++ b/src/app/feature/calendar/calendar-grid.component.html
@@ -6,9 +6,9 @@
 @for (card of cards; track $index) {
   <div
     class="card day-{{ card.day }}"
-    openDetailsDialog
+    xmasOpenDetailsDialog
     [card]="card"
-    [shakeWhenDisabled]="!card.canReveal && !card.revealed"
+    [xmasShakeWhenDisabled]="!card.canReveal && !card.revealed"
     [class.pulse]="card.canReveal && !card.revealed"
   >
     <label>
