feat: add 1st guest 2024, style fixes and modifications

--- a/src/app/feature/calendar/calendar-grid.component.html
+++ b/src/app/feature/calendar/calendar-grid.component.html
@@ -41,7 +41,7 @@
         <span></span>
       }
 
-      @if (card.contents && card.contents.length === 1) {
+      @if (card.contents && card.contents.length === 1 && card.revealed) {
         <div class="title-container">
           <div class="title-container-content">
             @for (content of card.contents; track $index) {
